# persona-bot

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  docker-compose.yml  package.json
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: RPG_DESIGN.md
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260303_0001_initial_schema.py  20260304_0002_personas.py  20260308_0003_characters.py
services/api/app/: __init__.py  character_service.py  config.py  db.py  llm_service.py  main.py  memory_service.py  models.py  persona_service.py  rag_context.py  schemas.py  session_service.py  state_engine.py
services/api/tests/: test_character_service.py  test_llm_service.py  test_memory_service.py  test_rag_context.py  test_state_engine.py  test_ws_stream.py
