[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personabot-api"
version = "0.1.0"
description = "Backend services for PersonaBot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "redis[hiredis]>=5,<6",
  "qdrant-client>=1.11,<2",
  "openai>=1.52,<2",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
